my-apps/headlamp/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: kube-system
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
  hostnames:
    - "headlamp.nielszwemmer.nl"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: headlamp
          port: 80
          weight: 1
